<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <include
        android:id="@+id/follow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/title" />

    <RelativeLayout
        android:id="@+id/tips_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingLeft="20dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:text="@string/tip"
            android:textColor="#55BBC3"
            android:textSize="16sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/rank"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="center"
                android:text="@string/rank"
                android:textColor="#FF0000"
                android:textSize="25sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="#FFFFFF" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="25dp"
                android:background="@drawable/border"
                android:padding="15dp"
                android:text="@string/tip_text"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/acquire_bg"
                    android:onClick="goGain"
                    android:text="@string/acquire"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/acquire_bg"
                    android:onClick="goShare"
                    android:text="@string/share_integral"
                    android:textSize="20sp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>